--- a/Lesson11/BusinessLogics/BusinessLogics.csproj
+++ b/Lesson11/BusinessLogics/BusinessLogics.csproj
@@ -6,4 +6,8 @@
     <AssemblyName>Lesson11.BL</AssemblyName>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+  </ItemGroup>
+
 </Project>
