--- a/Lesson11/Lesson11/Lesson11.csproj
+++ b/Lesson11/Lesson11/Lesson11.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BusinessLogics\BusinessLogics.csproj" />
+  </ItemGroup>
+
 </Project>
